ocp/east-west-gw-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ewgw
spec:
  selector:
    istio: east-west-gw
  servers:
  - port:
      name: tls-istiod
      number: 15012
      protocol: tls
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
  - port:
      name: tls-istiodwebhook
      number: 15017
      protocol: tls
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ewgw
spec:
  hosts:
  - "*"
  gateways:
  - ewgw
  tls:
  - match:
    - port: 15012
      sniHosts:
      - "*"
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 15012
  - match:
    - port: 15017
      sniHosts:
      - "*"
    route:
    - destination:
        host: istiod.istio-system.svc.cluster.local
        port:
          number: 443

# apiVersion: install.istio.io/v1alpha1
# kind: IstioOperator
# metadata:
#   name: eastwest
# spec:
#   revision: ""
#   profile: empty
#   components:
#     ingressGateways:
#       - name: istio-eastwestgateway
#         label:
#           istio: eastwestgateway
#           app: istio-eastwestgateway
#           topology.istio.io/network: network1
#         enabled: true
#         k8s:
#           env:
#             # sni-dnat adds the clusters required for AUTO_PASSTHROUGH mode
#             # This is not required in Istio 1.11+, but we add it just in case.
#             - name: ISTIO_META_ROUTER_MODE
#               value: "sni-dnat"
#             # traffic through this gateway should be routed inside the network
#             - name: ISTIO_META_REQUESTED_NETWORK_VIEW
#               value: network1
#           service:
#             ports:
#               - name: status-port
#                 port: 15021
#                 targetPort: 15021
#               - name: tls
#                 port: 15443
#                 targetPort: 15443
#               - name: tls-istiod
#                 port: 15012
#                 targetPort: 15012
#               - name: tls-webhook
#                 port: 15017
#                 targetPort: 15017
#   values:
#     gateways:
#       istio-ingressgateway:
#         injectionTemplate: gateway
#     global:
#       meshID: mesh1
#       network: network1
#       multiCluster:
#         clusterName: shaun-1
